# this is "dirty" code -- please don't compile with -Wall :)
AM_CFLAGS = -W
noinst_LIBRARIES = librx.a

librx_a_SOURCES = \
	hashrexp.c \
	_rx.h rx.c rx.h \
	rxanal.c rxanal.h \
	rxbasic.c rxbasic.h \
	rxbitset.c rxbitset.h \
	rxcontext.h \
	rxcset.c rxcset.h \
	rxgnucomp.c rxgnucomp.h \
	rxhash.c rxhash.h \
	rxnfa.c rxnfa.h \
	rxnode.c rxnode.h \
	rxposix.c inst-rxposix.h rxposix.h \
	rxproto.h \
	rxsimp.c rxsimp.h \
	rxspencer.c rxspencer.h \
	rxstr.c rxstr.h \
	rxsuper.c rxsuper.h \
	rxunfa.c rxunfa.h \
	rxall.h
